--- a/DataReader/CMakeLists.txt
+++ b/DataReader/CMakeLists.txt
@@ -1,6 +1,6 @@
 # CMakeLists.txt for event package. It creates a library with dictionary and a main program
 cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
-project(MpdCentrality)
+project(DataReader)
 
 # You need to tell CMake where to find the ROOT installation. This can be done in a number of ways:
 #   - ROOT built with classic configure/make use the provided $ROOTSYS/etc/cmake/FindROOT.cmake
@@ -16,17 +16,26 @@ include(${ROOT_USE_FILE})
 include_directories(${CMAKE_SOURCE_DIR} ${ROOT_INCLUDE_DIRS})
 add_definitions(${ROOT_CXX_FLAGS})
 
+set(CMAKE_BUILD_TYPE Debug)
 set(CMAKE_C_FLAGS "-O2")
 
-ROOT_GENERATE_DICTIONARY(G__MpdCent 
-MpdCentralityTreeReader.h
-MpdCentralityProcesses.h 
-LINKDEF MpdCentrality.LinkDef.h)
+ROOT_GENERATE_DICTIONARY(G__DataReader
+DataReader.h
+DataReaderEvent.h
+LINKDEF DataReader.LinkDef.h)
 
-#---Create a shared library with geneated dictionary
-add_library(MpdCent SHARED MpdCentralityTreeReader.cxx MpdCentralityProcesses.cxx G__MpdCent.cxx)
-target_link_libraries(MpdCent ${ROOT_LIBRARIES})
+ROOT_GENERATE_DICTIONARY(G__DataReaderEvent
+DataReaderEvent.h
+LINKDEF DataReaderEvent.LinkDef.h)
+
+#---Create a shared library with geneated dictionary for DataReaderEvent class
+add_library(DataReaderEvent SHARED DataReaderEvent.cxx G__DataReaderEvent.cxx)
+target_link_libraries(DataReaderEvent ${ROOT_LIBRARIES})
+
+#---Create a shared library with geneated dictionary for DataReader class
+add_library(DataReader SHARED DataReader.cxx DataReaderEvent.cxx G__DataReader.cxx)
+target_link_libraries(DataReader DataReaderEvent ${ROOT_LIBRARIES})
 
 #---Create  a main program using the library
-add_executable(Main MpdCentralityMain.cxx)
-target_link_libraries(Main MpdCent)
+add_executable(Main DataReaderMain.cxx)
+target_link_libraries(Main DataReader)
